--- a/public/styles.css
+++ b/public/styles.css
@@ -52,6 +52,10 @@ p, h1, h2, h3, h4, h5, h6 {
     width: 100%;
     background-color: var(--light_pink);
     position: fixed;
+    z-index: -1;
+}
+.main-bg img{
+    width: 100%;
 }
 .main-bg__image--mobile{
     display: none;
